Fixed linker error

--- a/cs2-test/cs2-test.vcxproj
+++ b/cs2-test/cs2-test.vcxproj
@@ -166,7 +166,7 @@
     <ClInclude Include="third-party\minhook\include\MinHook.h" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="third-party\minhook\lib\minhook.x64d.lib" />
+    <Library Include="third-party\minhook\lib\MinHook.x64.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
