--- a/.gitignore
+++ b/.gitignore
@@ -373,3 +373,9 @@ FodyWeavers.xsd
 /build/intermediate/cs2-test.tlog/link.command.1.tlog
 /build/intermediate/cs2-test.tlog/link.read.1.tlog
 /build/intermediate/vc143.idb
+/build/intermediate/cs2-test.dll.recipe
+/build/intermediate/cs2-test.tlog/CL.command.1.tlog
+/build/intermediate/cs2-test.tlog/Cl.items.tlog
+/build/intermediate/cs2-test.tlog/cs2-test.lastbuildstate
+/build/intermediate/cs2-test.tlog/link.secondary.1.tlog
+/build/intermediate/cs2-test.tlog/link.write.1.tlog
