--- a/cs2-test/cs2-test.vcxproj.filters
+++ b/cs2-test/cs2-test.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="utils\hooked_func.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="features\render\render.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="features\menu\menu.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="features\cheat.hpp">
