--- a/cs2-test/cs2-test.vcxproj.filters
+++ b/cs2-test/cs2-test.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="features\menu\menu.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="features\game\utils.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="features\cheat.hpp">
@@ -105,6 +108,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="utils\locale.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="utils\structs.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
