Statically linking minhook

--- a/cs2-test/cs2-test.vcxproj
+++ b/cs2-test/cs2-test.vcxproj
@@ -147,6 +147,8 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>libMinHook.x64.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(Projectname)\third-party\minhook\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -190,7 +192,7 @@
     <ClInclude Include="utils\structs.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="third-party\minhook\lib\MinHook.x64.lib" />
+    <Library Include="third-party\minhook\lib\libMinHook.x64.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
