--- a/cs2_internal/cs2_internal.vcxproj.filters
+++ b/cs2_internal/cs2_internal.vcxproj.filters
@@ -104,9 +104,6 @@
     <ClInclude Include="offset\buttons.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="offset\client.dll.hpp">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="offset\offsets.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -123,6 +120,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="features\render\draw_list.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="offset\client_dll.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
