--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj
@@ -164,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cheat\cheat.hpp" />
+    <ClInclude Include="log\log.hpp" />
     <ClInclude Include="third_party\imgui\imconfig.h" />
     <ClInclude Include="third_party\imgui\imgui.h" />
     <ClInclude Include="third_party\imgui\imgui_impl_dx11.h" />
@@ -173,7 +174,9 @@
     <ClInclude Include="third_party\imgui\imstb_textedit.h" />
     <ClInclude Include="third_party\imgui\imstb_truetype.h" />
     <ClInclude Include="third_party\minhook\include\MinHook.h" />
-    <ClInclude Include="utils\hook_manager.hpp" />
+    <ClInclude Include="hook\hook_manager.hpp" />
+    <ClInclude Include="utils\ct_constants.hpp" />
+    <ClInclude Include="utils\fnv1a.hpp" />
     <ClInclude Include="utils\random.hpp" />
   </ItemGroup>
   <ItemGroup>
