--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj.filters
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClInclude Include="utils\ct_constants.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="core\core.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="third_party\minhook\lib\libMinHook.x64.lib" />
