--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj
@@ -164,6 +164,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cheat\cheat.hpp" />
+    <ClInclude Include="core\core.hpp" />
     <ClInclude Include="log\log.hpp" />
     <ClInclude Include="third_party\imgui\imconfig.h" />
     <ClInclude Include="third_party\imgui\imgui.h" />
