--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="cheat\cheat.hpp" />
     <ClInclude Include="core\core.hpp" />
     <ClInclude Include="game\game_modules.hpp" />
+    <ClInclude Include="game\vtable.hpp" />
     <ClInclude Include="log\log.hpp" />
     <ClInclude Include="memory\memory.hpp" />
     <ClInclude Include="offset\client_dll.hpp" />
