--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj
@@ -150,11 +150,14 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
+      <AdditionalDependencies>$(SolutionDir)$(Projectname)\third_party\minhook\lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cheat\cheat.cpp" />
+    <ClCompile Include="core\interfaces.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="core\hooks.cpp" />
     <ClCompile Include="log\log.cpp" />
     <ClCompile Include="memory\memory.cpp" />
     <ClCompile Include="third_party\imgui\imgui.cpp" />
@@ -163,18 +166,24 @@
     <ClCompile Include="third_party\imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="third_party\imgui\imgui_tables.cpp" />
     <ClCompile Include="third_party\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="utils\inputsystem.cpp" />
     <ClCompile Include="windows_api\win_api.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cheat\cheat.hpp" />
+    <ClInclude Include="core\common.hpp" />
     <ClInclude Include="core\core.hpp" />
+    <ClInclude Include="core\interfaces.hpp" />
     <ClInclude Include="game\game_modules.hpp" />
     <ClInclude Include="game\vtable.hpp" />
+    <ClInclude Include="core\hooks.hpp" />
     <ClInclude Include="log\log.hpp" />
     <ClInclude Include="memory\memory.hpp" />
     <ClInclude Include="offset\client_dll.hpp" />
     <ClInclude Include="offset\offset.hpp" />
     <ClInclude Include="offset\offsets.hpp" />
+    <ClInclude Include="sdk\interfaces\iinputsystem.hpp" />
+    <ClInclude Include="sdk\interfaces\iswapchaindx11.hpp" />
     <ClInclude Include="third_party\imgui\imconfig.h" />
     <ClInclude Include="third_party\imgui\imgui.h" />
     <ClInclude Include="third_party\imgui\imgui_impl_dx11.h" />
@@ -185,6 +194,7 @@
     <ClInclude Include="third_party\imgui\imstb_truetype.h" />
     <ClInclude Include="third_party\minhook\include\MinHook.h" />
     <ClInclude Include="hook\hook_manager.hpp" />
+    <ClInclude Include="utils\inputsystem.hpp" />
     <ClInclude Include="utils\pe64.hpp" />
     <ClInclude Include="utils\xorstr.hpp" />
     <ClInclude Include="utils\crt_string.hpp" />
