added menu demo (from https://github.com/AAA-ALR/ImGui-Tool-Style_Gui)

--- a/cs2_internal_recoded/cs2_internal_recoded.vcxproj.filters
+++ b/cs2_internal_recoded/cs2_internal_recoded.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="render\render.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="third_party\imgui\imgui_stdlib.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="utils\random.hpp">
@@ -165,6 +168,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="render\font.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="third_party\imgui\imgui_stdlib.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
